# LIS

./: .gitignore  LICENSE  README.md  hierarchial.py  train.py  train_pytorch.py  train_tf.py
FAST/: fast.cpp
cpp/: main.cpp  mat_mul.cpp
data/: first_weights_sample.txt
inference/: CMakeLists.txt  accuracy_test.cpp  avx_mm.cpp  avx_mm.h  benchmark.cpp  btree.cpp  btree.h  btree.hpp  build.sh  fast.cpp  generate_weights_arrays.py  inference.cpp  inference.h  inference.hpp  inference64.cpp  lms_algo.cpp  lms_algo.h  lms_algo.hpp  main.cpp  mat.h  mat_mul.cpp  results  weights.h  weights.h.ph
inference/btree/: btree_map.h
utils/: generate_lognormal.py  generate_sample_data.py  on_disk_merge.py  parse_maps_data.py  parse_timestamp_data.py
