cmake_minimum_required(VERSION 2.6)
project(Inference)
set(CMAKE_CXX_COMPLIER /usr/local/bin/g++-9)
#add_executable(inference main.cpp avx_test.cpp avx_test.h)
#add_executable(inference main.cpp avx_new.cpp avx_new.h)
set(CMAKE_CXX_FLAGS -mavx2)
#add_executable(inference avx_test.cpp avx_test.h)
#add_executable(inference avx_new.cpp avx_new.h)
#add_executable(inference main.cpp)
#add_executable(inference avx_mm.cpp avx_mm.h)
add_executable(bench benchmark.cpp inference.cpp inference.h btree.h lms_algo.h)
install(TARGETS bench DESTINATION ${CMAKE_INSTALL_PREFIX})